--- a/clientv2/mybaby/package.json
+++ b/clientv2/mybaby/package.json
@@ -15,6 +15,9 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.13"
   }
 }
