--- a/clientv2/mybaby/package.json
+++ b/clientv2/mybaby/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "luxon": "^3.5.0",
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
